# kokorotts

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  kokoro_tts  test0.wav.json  test1.wav.json  test2.wav.json
libtorch/: build-hash  build-version
libtorch/include/ATen/: Context.h  TensorIterator.h
libtorch/include/ATen/core/: TensorBase.h  jit_type.h
libtorch/include/ATen/cpu/vec/sve/: vec_qint.h
libtorch/include/ATen/cpu/vec/vec128/: vec128_half_neon.h
libtorch/include/ATen/cpu/vec/vec256/: vec256_16bit_float.h  vec256_int.h  vec256_qint.h
libtorch/include/ATen/cpu/vec/vec512/: vec512_qint.h
libtorch/include/ATen/cuda/: CUDAConfig.h  CUDAContextLight.h  cub.cuh  cub_definitions.cuh
libtorch/include/ATen/mps/: MPSAllocator.h  MPSAllocatorInterface.h
libtorch/include/ATen/native/: ConvUtils.h
libtorch/include/ATen/native/cuda/: Normalization.cuh  Reduce.cuh
libtorch/include/ATen/native/mps/: MetalShaderLibrary.h
libtorch/include/ATen/native/mps/kernels/: DecodeAttention.h  GridSampler.h
libtorch/include/c10/core/: AllocatorConfig.h  DispatchKey.h  StorageImpl.h  TensorImpl.h
libtorch/include/c10/metal/: common.h  reduction_utils.h  utils.h
libtorch/include/c10/util/: Exception.h
libtorch/include/caffe2/core/: macros.h
libtorch/include/fbgemm/: Assert.h  Fbgemm.h  FbgemmBuild.h  FbgemmEmbedding.h  FbgemmFPCommon.h  FbgemmPackMatrixB.h  OutputProcessing-inl.h  QuantUtilsNeon.h  Types.h  Utils.h
libtorch/include/pybind11/: attr.h  buffer_info.h  cast.h  chrono.h  complex.h  embed.h  gil.h  gil_safe_call_once.h  iostream.h  native_enum.h  numpy.h  pybind11.h  pytypes.h  stl_bind.h  subinterpreter.h  typing.h
libtorch/include/pybind11/detail/: argument_vector.h  class.h  common.h  cpp_conduit.h  function_record_pyobject.h  holder_caster_foreign_helpers.h  init.h  internals.h  native_enum_data.h  pybind11_namespace_macros.h  struct_smart_holder.h  type_caster_base.h  value_and_holder.h
libtorch/include/pybind11/eigen/: tensor.h
libtorch/include/pybind11/stl/: filesystem.h
libtorch/include/torch/csrc/autograd/: function.h  node.h  python_function.h
libtorch/include/torch/csrc/autograd/functions/: accumulate_grad.h
libtorch/include/torch/csrc/inductor/: cpp_prefix.h
libtorch/include/torch/csrc/inductor/aoti_eager/: kernel_meta_info.h
libtorch/include/torch/csrc/utils/: disable_torch_function.h  python_arg_parser.h
libtorch/lib/: libcudart.so.12  libcupti.so.12
scripts/: download_assets.py  export_model.py  istftnet.py  modules.py
src/: main.cpp
src/audio/: wav_writer.cpp  wav_writer.h
src/kokoro/: kokoro_tts.cpp  kokoro_tts.h
src/misaki/: cmudict.cpp  cmudict.h  g2p.cpp  g2p.h  text_normalizer.cpp  text_normalizer.h  tokenizer.cpp  tokenizer.h  vocab.h
(+6 files in other folders)
